syntax = "proto3";

package com.road.yishi.proto.building;

message GiveupWildLandMsg {
  string wildLandPos = 1;
}
